MDEV-5978: valgrind failure in rpl_row_corruption - Fix valgrind failure: don't touch table_list->master_had_triggers   when RBR_TRIGGERS is not compiled in.